--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -46,6 +48,8 @@
     "@types/node": "^24.9.1",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
