--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,9 @@
 PORT=3000
 NODE_ENV=development
 
-# PostgreSQL Configuration
-# Para PostgreSQL local:
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=sportsline_db
-# DB_USER=postgres
-# DB_PASSWORD=postgres
-
-# Para PostgreSQL en la nube (Neon/Supabase/Railway):
-DB_HOST=tu-host.neon.tech
-DB_PORT=5432
-DB_NAME=tu-db-name
-DB_USER=tu-usuario
-DB_PASSWORD=tu-contraseña
+# Supabase PostgreSQL URI
+# Obtén esta URI desde tu proyecto de Supabase > Settings > Database
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
 # JWT Configuration
 JWT_SECRET=tu_jwt_supersecreto
